--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -43,7 +43,7 @@
   .purple-header {
     background-color: #c0d4ff;
   }
-  
+
   .small-screen-header {
     display: none;
   }
@@ -72,6 +72,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    cursor: grab;
     &-header {
       display: flex;
       justify-content: space-between;
@@ -118,4 +119,13 @@
       }
     }
   }
+}
+
+.kanban.minimize .columns-container {
+  display: none;
+}
+
+.main-title {
+  cursor: pointer;
+  padding: 10px;
 }
