--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -1,10 +1,9 @@
 .kanban-container {
-  // display: grid;
-  // grid-template-columns: repeat(3, max-content);
   display: flex;
   gap: 1rem;
   overflow-x: auto;
 }
+
 .kanban {
   min-height: 100vh;
   font-size: font-size(font-size-regular);
@@ -16,7 +15,6 @@
     align-items: center;
     justify-content: space-between;
     font-size: font-size(font-size-medium);
-    // background-color: var(--color-green-light);
     padding: 0 1rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
@@ -26,20 +24,25 @@
       align-items: center;
       gap: 0.4rem;
     }
+
     .fill-icon {
       font-size: font-size(font-size-medium);
     }
+
     .close-icon {
       font-size: font-size(font-size-xlarge);
       cursor: pointer;
     }
   }
+
   .green-header {
     background-color: #d0ffc0;
   }
+
   .yellow-header {
     background-color: #fff6c0;
   }
+
   .purple-header {
     background-color: #c0d4ff;
   }
@@ -47,12 +50,14 @@
   .small-screen-header {
     display: none;
   }
+
   &-content-container {
     display: flex;
     gap: 1rem;
     margin-top: 1rem;
   }
 }
+
 .kanban-content {
   display: flex;
   flex-direction: column;
@@ -60,11 +65,14 @@
   padding: 0 1rem 1rem 1rem;
   max-width: 350px;
   min-width: 300px;
+
   .kanban-title {
     text-align: start;
     padding-right: 0.4rem;
     font-size: font-size(font-size-medium);
+    pointer-events: none; /* Make the kanban-title non-draggable */
   }
+
   .kanban-note {
     border-radius: 0.5rem;
     border: 0.5px solid var(--color-bg-dark);
@@ -73,18 +81,22 @@
     flex-direction: column;
     gap: 1rem;
     cursor: grab;
+
     &-header {
       display: flex;
       justify-content: space-between;
       gap: 2rem;
+
       .status-icon {
         font-size: font-size(font-size-small);
         vertical-align: middle;
         color: var(--color-green);
       }
+
       .status-icon.green {
         color: var(--color-green);
       }
+
       .status-icon.blue {
         color: var(--color-blue);
       }
@@ -101,19 +113,24 @@
 @media screen and (max-width: 985px) {
   .kanban-container {
     flex-direction: column;
+
     .kanban {
       min-height: 0;
+
       &-header {
         min-width: 97%;
         position: fixed;
         margin-left: 2rem;
       }
+
       .hidden-header {
         display: none;
       }
+
       .small-screen-header {
         display: flex;
       }
+
       .kanban-content-container {
         margin-top: 5rem;
       }
@@ -121,8 +138,15 @@
   }
 }
 
-.kanban.minimize .columns-container {
-  display: none;
+.kanban.minimize {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: column-reverse;
+
+  .kanban-header {
+    gap: 1rem;
+  }
 }
 
 .main-title {
