--- a/sass/_chips.scss
+++ b/sass/_chips.scss
@@ -1,18 +1,18 @@
 .small-chip {
   font-size: font-size(font-size-small);
   gap: $gap-xsmall;
-  padding: 2px 10px;
+  padding: 0 10px;
   border-radius: $border-radius-big;
   width: fit-content;
   min-width: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   cursor: pointer;
-  
+
   .material-symbols-outlined {
     font-size: 20px;
-margin-right: -10px;
+    margin-right: -10px;
   }
 }
 .small-chip.green {
