--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -1,4 +1,5 @@
 .edit-content {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,6 +11,59 @@
   border: 1px solid var(--color-on-primary);
   // width: 200px;
   transition: $transition;
+
+  .edit-content-menu {
+    position: absolute;
+    background-color: var(--color-on-primary);
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+      0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    padding: 10px;
+    top: 100%;
+    right: 30%;
+    margin: 0.5rem;
+    z-index: 100;
+    min-width: 350px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    &__header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &--right {
+        display: flex;
+        gap: 0.5rem;
+        .edit-content-menu__category {
+          border-top-left-radius: 0.5rem;
+          border-top-right-radius: 0.5rem;
+          border: 1px solid var(--color-primary);
+          padding: 0 0.5rem;
+          cursor: pointer;
+        }
+        .edit-content-menu__category:hover {
+          background-color: var(--color-primary);
+          color: var(--color-on-primary);
+        }
+        .edit-content-menu__category.clicked {
+          background-color: var(--color-primary);
+          color: var(--color-on-primary);
+        }
+      }
+    }
+    &__all {
+      div {
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+      }
+    }
+    &__create {
+      display: flex;
+      gap: 0.6rem;
+    }
+  }
 
   .material-symbols-outlined {
     opacity: 0.7;
@@ -61,11 +115,11 @@
       height: 100%;
       display: flex;
       align-items: center;
-      padding: 0 .1rem;
+      padding: 0 0.1rem;
       transition: $transition;
     }
     .material-symbols-outlined:hover {
-        background-color: #E0E2EC;
+      background-color: #e0e2ec;
     }
   }
   // .edit-field:hover,
@@ -75,25 +129,29 @@
   .edit-field:focus-within {
     border: 1px solid var(--color-primary);
   }
+
+  .edit-content-menu {
+    position: absolute;
+    bottom: 0;
+  }
 }
 // .edit-content:hover {
 //   background-color: #E0E2EC;
 // }
 
 .edit-content:hover:not(.focus-content) {
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
 }
 
 .focus-content {
   background-color: var(--color-primary);
-  .label { 
+  .label {
     color: var(--color-on-primary);
-
   }
 }
 .focus-content-press {
   background-color: var(--color-primary) !important;
-  .label { 
+  .label {
     color: var(--color-on-primary);
   }
 }
@@ -228,22 +286,22 @@
   justify-content: space-between;
   width: 100%;
   padding: $padding-small;
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
   border-top-left-radius: $border-radius-small;
   border-top-right-radius: $border-radius-small;
-.btns {
-  display: flex;
-}
+  .btns {
+    display: flex;
+  }
   .tools {
     display: flex;
     align-items: center;
-    gap: .6rem;
+    gap: 0.6rem;
     cursor: pointer;
     .line {
       height: 20px;
       width: 2.3px;
-      background-color: var(--color-permanent-primary); 
-      opacity: .2;
+      background-color: var(--color-permanent-primary);
+      opacity: 0.2;
     }
   }
 }
@@ -257,7 +315,7 @@
   justify-content: space-between;
   width: 100%;
   padding: $padding-small;
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
   border-bottom-left-radius: $border-radius-small;
   border-bottom-right-radius: $border-radius-small;
   .tools {
@@ -279,8 +337,7 @@
   width: 15px;
   cursor: pointer;
   transition: $transition;
-
 }
 .arrow-small-padding:hover {
-opacity: 1;
+  opacity: 1;
 }
