--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1428,6 +1428,22 @@ tr > td:first-child {
   transition: border 1s ease-in; /* Add a transition effect for a smoother change */
 }
 
+.zero-extend .card {
+  background-color: transparent;
+  container-type: normal;
+}
+.zero-extend .card .card-header .top .left .title span {
+  font-size: 1.8rem;
+}
+.zero-extend .card .card-boxes {
+  grid-template-columns: repeat(1fr);
+}
+
+@media screen and (max-width: 2000px) {
+  .zero-extend .card .card-boxes {
+    grid-template-columns: repeat(1fr);
+  }
+}
 input[type=text],
 input[type=password],
 input[type=number] {
@@ -2137,13 +2153,13 @@ textarea {
 .small-chip {
   font-size: 1.2rem;
   gap: 0.2rem;
-  padding: 2px 10px;
+  padding: 0 10px;
   border-radius: 2.2rem;
   width: fit-content;
   min-width: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   cursor: pointer;
 }
 .small-chip .material-symbols-outlined {
@@ -2305,6 +2321,7 @@ textarea {
   }
 }
 .edit-content {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -2313,6 +2330,55 @@ textarea {
   gap: 1rem;
   border: 1px solid var(--color-on-primary);
   transition: all 0.2s ease-in-out;
+}
+.edit-content .edit-content-menu {
+  position: absolute;
+  background-color: var(--color-on-primary);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  padding: 10px;
+  top: 100%;
+  right: 30%;
+  margin: 0.5rem;
+  z-index: 100;
+  min-width: 350px;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.edit-content .edit-content-menu__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.edit-content .edit-content-menu__header--right {
+  display: flex;
+  gap: 0.5rem;
+}
+.edit-content .edit-content-menu__header--right .edit-content-menu__category {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  border: 1px solid var(--color-primary);
+  padding: 0 0.5rem;
+  cursor: pointer;
+}
+.edit-content .edit-content-menu__header--right .edit-content-menu__category:hover {
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+}
+.edit-content .edit-content-menu__header--right .edit-content-menu__category.clicked {
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+}
+.edit-content .edit-content-menu__all div {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.edit-content .edit-content-menu__create {
+  display: flex;
+  gap: 0.6rem;
 }
 .edit-content .material-symbols-outlined {
   opacity: 0.7;
@@ -2364,14 +2430,18 @@ textarea {
   transition: all 0.2s ease-in-out;
 }
 .edit-content .edit-field .material-symbols-outlined:hover {
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
 }
 .edit-content .edit-field:focus-within {
   border: 1px solid var(--color-primary);
 }
+.edit-content .edit-content-menu {
+  position: absolute;
+  bottom: 0;
+}
 
 .edit-content:hover:not(.focus-content) {
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
 }
 
 .focus-content {
@@ -2519,7 +2589,7 @@ textarea {
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
@@ -2550,7 +2620,7 @@ textarea {
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
-  background-color: #E0E2EC;
+  background-color: #e0e2ec;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
