--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -14,7 +14,7 @@
     max-width: 100%;
     container-type: inline-size;
     border-radius: $border-radius-medium;
-    min-height: 110vh;
+    // min-height: 110vh;
 
     &__navigate {
       display: flex;
