--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -302,9 +302,13 @@
     }
     .new-class {
       grid-template-columns: repeat(1, 1fr);
-      .zero-extend {
-        background-color: var(--color-bg-light);
-      }
+      // .zero-extend {
+      //   background-color: var(--color-bg-light);
+      // }
     }
   }
+}
+.new-class-bg {
+  background-color: #e0f0fb !important;
+  border: 1px solid var(--color-blue);
 }
