--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1437,8 +1437,10 @@ tr > td:first-child {
 .zero-extend .card .new-class {
   grid-template-columns: repeat(1, 1fr);
 }
-.zero-extend .card .new-class .zero-extend {
-  background-color: var(--color-bg-light);
+
+.new-class-bg {
+  background-color: #e0f0fb !important;
+  border: 1px solid var(--color-blue);
 }
 
 input[type=text],
@@ -1484,13 +1486,14 @@ input[type=text]::placeholder {
 }
 
 input[type=text].edit-name {
-  height: 4.6rem;
+  height: 4rem;
   border-radius: 2.2rem;
   background-color: var(--color-on-primary);
   padding: 0 1rem;
   background-origin: content-box;
-  font-size: 2rem;
+  font-size: 1.8rem;
   border: 1px solid #75acce;
+  max-width: 200px;
 }
 
 input[type=text].edit-name:hover,
@@ -1500,7 +1503,7 @@ input[type=text].edit-name:focus-within {
 
 input[type=text].edit-name::placeholder {
   opacity: 0.5;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .label-container {
