--- a/sass/_small-boxes.scss
+++ b/sass/_small-boxes.scss
@@ -69,7 +69,7 @@
     width: max-content;
     justify-content: center;
     border-radius: $border-radius-medium;
-    border: 1px solid var(--color-on-primary-light);
+    border: .5px solid var(--color-on-primary-light);
     padding: $padding-small $padding-medium;
     font-size: font-size(font-size-regular);
     transition: $transition;
