--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -55,7 +55,7 @@
         display: flex;
         align-items: center;
         gap: 7px;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
       }
     }
     .right {
