--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -23,8 +23,8 @@
     right: 30%;
     margin: 0.5rem;
     z-index: 100;
-    min-width: 350px;
-    min-height: 200px;
+    min-width: 250px;
+    min-height: min-content;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -51,12 +51,17 @@
           color: var(--color-on-primary);
         }
       }
+      &--left {
+        span:first-child,
+        span:nth-child(2) {
+          font-size: 2rem;
+        }
+      }
     }
     &__all {
       div {
-        display: flex;
-        gap: 1rem;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 60px 1fr;
       }
     }
     &__create {
