--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2342,8 +2342,8 @@ textarea {
   right: 30%;
   margin: 0.5rem;
   z-index: 100;
-  min-width: 350px;
-  min-height: 200px;
+  min-width: 250px;
+  min-height: min-content;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -2372,10 +2372,13 @@ textarea {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
 }
+.edit-content .edit-content-menu__header--left span:first-child,
+.edit-content .edit-content-menu__header--left span:nth-child(2) {
+  font-size: 2rem;
+}
 .edit-content .edit-content-menu__all div {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 60px 1fr;
 }
 .edit-content .edit-content-menu__create {
   display: flex;
