--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2777,6 +2777,7 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 0px;
 }
 
 .small-boxes-container-second {
