--- a/sass/_small-boxes.scss
+++ b/sass/_small-boxes.scss
@@ -58,6 +58,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 0px;
 }
 .small-boxes-container-second {
   display: flex;
