--- a/sass/_small-boxes.scss
+++ b/sass/_small-boxes.scss
@@ -56,7 +56,7 @@
 }
 .container-new-small-boxes-second {
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
   gap: 0px;
 }
