--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -10,13 +10,14 @@
   background-color: var(--color-on-primary);
   border-radius: 1rem;
   animation: minimize-reversed 0.3s ease-in-out forwards;
+  padding: 1rem;
 
   &-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: font-size(font-size-medium);
-    padding: 0 1rem;
+    // padding: 0 1rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 
@@ -29,23 +30,24 @@
       border-radius: 1rem;
     }
     .status-container.green {
-      background-color: #b4f1a0;
+      background-color: #dafeda;
       .fill-icon {
         color: #59854b;
       }
     }
     .status-container.yellow {
-      background-color: #f4e7a0;
+      background-color: #fef6d4;
       .fill-icon {
         color: #cbb434;
       }
     }
     .status-container.purple {
-      background-color: #aec6fa;
+      background-color: #e1d6fe;
       .fill-icon {
         color: #395286;
       }
     }
+
     .fill-icon {
       font-size: font-size(font-size-medium);
     }
@@ -54,18 +56,6 @@
       font-size: font-size(font-size-xlarge);
       cursor: pointer;
     }
-  }
-
-  .green-header {
-    background-color: #d0ffc0;
-  }
-
-  .yellow-header {
-    background-color: #fff6c0;
-  }
-
-  .purple-header {
-    background-color: #c0d4ff;
   }
 
   .small-screen-header {
@@ -86,6 +76,15 @@
     transform: rotate(0deg);
   }
 }
+.kanban.green {
+  background-color: #e9fee9;
+}
+.kanban.yellow {
+  background-color: #fefae9;
+}
+.kanban.purple {
+  background-color: #efe9fe;
+}
 
 .kanban-content {
   display: flex;
@@ -94,6 +93,8 @@
   padding: 0 1rem 1rem 1rem;
   max-width: 350px;
   min-width: 300px;
+  border: 0.2px solid rgba(170, 168, 168, 0.523);
+  border-radius: $border-radius-small;
 
   .kanban-title {
     text-align: start;
@@ -110,6 +111,7 @@
     flex-direction: column;
     gap: 1rem;
     cursor: grab;
+    background-color: var(--color-on-primary);
 
     &-header {
       display: flex;
@@ -172,8 +174,7 @@
   align-items: start;
   justify-content: start;
   flex-direction: column-reverse;
-  // transform: rotate(90deg);
-  min-height: 150px;
+  min-height: 140px;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -182,6 +183,17 @@
   animation: minimize 0.3s ease-in-out forwards;
   .kanban-header {
     gap: 1rem;
+  }
+  .green-header {
+    background-color: #DAFEDA;
+  }
+
+  .yellow-header {
+    background-color: #FEF6D4;
+  }
+
+  .purple-header {
+    background-color: #E1D6FE;
   }
 }
 @keyframes minimize {
