--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -174,26 +174,24 @@
   align-items: start;
   justify-content: start;
   flex-direction: column-reverse;
-  min-height: 140px;
+  min-height: 120px;
   height: min-content;
   width: 50px;
   align-items: center;
   justify-content: center;
   background-color: transparent;
   animation: minimize 0.3s ease-in-out forwards;
-  .kanban-header {
-    gap: 1rem;
-  }
+
   .green-header {
-    background-color: #DAFEDA;
+    background-color: #dafeda;
   }
 
   .yellow-header {
-    background-color: #FEF6D4;
+    background-color: #fef6d4;
   }
 
   .purple-header {
-    background-color: #E1D6FE;
+    background-color: #e1d6fe;
   }
 }
 @keyframes minimize {
