--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -93,8 +93,10 @@
   padding: 0 1rem 1rem 1rem;
   max-width: 350px;
   min-width: 300px;
-  border: 0.2px solid rgba(170, 168, 168, 0.523);
+  border: 0.5px solid var(--color-bg-dark);
+
   border-radius: $border-radius-small;
+  background-color: var(--color-on-primary);
 
   .kanban-title {
     text-align: start;
