--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -96,7 +96,7 @@
   border: 0.5px solid var(--color-bg-dark);
 
   border-radius: $border-radius-small;
-  background-color: var(--color-on-primary);
+  background-color: #ffffff8c;
 
   .kanban-title {
     text-align: start;
