--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3267,7 +3267,7 @@ textarea {
   min-width: 300px;
   border: 0.5px solid var(--color-bg-dark);
   border-radius: 0.5rem;
-  background-color: var(--color-on-primary);
+  background-color: rgba(255, 255, 255, 0.5490196078);
 }
 .kanban-content .kanban-title {
   text-align: start;
