--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3264,7 +3264,7 @@ textarea {
   padding: 0 1rem 1rem 1rem;
   max-width: 350px;
   min-width: 300px;
-  border: 0.5px solid var(--color-bg-dark);
+  border: 0.5px solid rgba(176, 176, 176, 0.719);
   border-radius: 0.5rem;
 }
 .kanban-content .kanban-title {
