--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -115,6 +115,7 @@
     gap: 1rem;
     cursor: grab;
     background-color: var(--color-on-primary);
+    position: relative;
 
     &-header {
       display: flex;
@@ -141,6 +142,16 @@
       font-size: 15px;
       color: var(--color-primary);
     }
+  }
+  .kanban-note::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    bottom: 8px;
+    right: 0;
+    width: 1px;
+    // height: 100%;
+    background-color: red;
   }
 }
 
