--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -94,10 +94,10 @@
   max-width: 350px;
   min-width: 300px;
   // border: 0.5px solid var(--color-bg-dark);
-  border: 0.5px solid rgba(176, 176, 176, 0.719);
+  // border: 0.5px solid rgba(176, 176, 176, 0.719);
 
   border-radius: $border-radius-small;
-  // background-color: #ffffff8c;
+  background-color: #ffffff8c;
 
   .kanban-title {
     text-align: start;
