--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3264,8 +3264,8 @@ textarea {
   padding: 0 1rem 1rem 1rem;
   max-width: 350px;
   min-width: 300px;
-  border: 0.5px solid rgba(176, 176, 176, 0.719);
   border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.5490196078);
 }
 .kanban-content .kanban-title {
   text-align: start;
