--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -36,7 +36,7 @@
       }
     }
     .status-container.yellow {
-      background-color: #f9ecb2;
+      background-color: #fcecbb;
       .fill-icon {
         color: #cbb434;
       }
@@ -191,7 +191,7 @@
   }
 
   .yellow-header {
-    background-color: #f9ecb2;
+    background-color: #fcecbb;
   }
 
   .purple-header {
