--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3304,6 +3304,18 @@ textarea {
   font-size: 15px;
   color: var(--color-primary);
 }
+.kanban-content .kanban-note.yellow-border {
+  border: 0.5px solid #fff8b8;
+  background-color: #fff8b8;
+}
+.kanban-content .kanban-note.pink-border {
+  border: 0.5px solid #ffc1bb;
+  background-color: #ffc1bb;
+}
+.kanban-content .kanban-note.blue-border {
+  border: 0.5px solid #d4e4ed;
+  background-color: #d4e4ed;
+}
 
 .kanban.minimize {
   display: flex;
