--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2344,10 +2344,10 @@ textarea {
   border-radius: 8px;
   padding: 10px;
   top: 100%;
-  right: 30%;
   margin: 0.5rem;
   z-index: 100;
   min-width: 250px;
+  max-width: max-content;
   min-height: min-content;
   display: flex;
   flex-direction: column;
@@ -2357,12 +2357,14 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1rem;
 }
 .edit-content .edit-content-menu__header--right {
   display: flex;
   gap: 0.5rem;
 }
 .edit-content .edit-content-menu__header--right .edit-content-menu__category {
+  display: inline-block;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
   border: 1px solid var(--color-primary);
@@ -2376,6 +2378,11 @@ textarea {
 .edit-content .edit-content-menu__header--right .edit-content-menu__category.clicked {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
+}
+.edit-content .edit-content-menu__header--left {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 .edit-content .edit-content-menu__header--left span:first-child,
 .edit-content .edit-content-menu__header--left span:nth-child(2) {
@@ -2443,10 +2450,6 @@ textarea {
 }
 .edit-content .edit-field:focus-within {
   border: 1px solid var(--color-primary);
-}
-.edit-content .edit-content-menu {
-  position: absolute;
-  bottom: 0;
 }
 
 .edit-content:hover:not(.focus-content) {
