--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -31,18 +31,23 @@
     }
     .status-container.green {
       background-color: #b8e4c1;
+      color: #36562c;
+
       .fill-icon {
         color: #59854b;
       }
     }
     .status-container.yellow {
       background-color: #fcecbb;
+      color: #625610;
       .fill-icon {
         color: #cbb434;
       }
     }
     .status-container.purple {
       background-color: #e1d6fe;
+      color: #203053;
+
       .fill-icon {
         color: #395286;
       }
@@ -145,19 +150,15 @@
 
   .kanban-note.yellow-border {
     border: 0.5px solid #fff8b8;
-    background-color: #fff8b8;
   }
   .kanban-note.pink-border {
     border: 0.5px solid #ffc1bb;
-    background-color: #ffc1bb;
   }
   .kanban-note.blue-border {
     border: 0.5px solid #d4e4ed;
-    background-color: #d4e4ed;
   }
   .kanban-note.green-border {
     border: 0.5px solid #d4edd7;
-    background-color: #d4edd7;
   }
 }
 
