--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -20,18 +20,17 @@
     border-radius: 8px;
     padding: 10px;
     top: 100%;
-    // right: 30%;
-    // left: 0;
     margin: 0.5rem;
     z-index: 100;
-    min-width: 250px;
-    max-width: max-content;
-    min-height: min-content;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    min-width: 200px;
+    max-width: 350px;
+
     &__header {
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: space-between;
       gap: 1rem;
@@ -39,7 +38,8 @@
         display: flex;
         gap: 0.5rem;
         overflow: scroll;
-        max-width: 250px;
+        max-width: 300px;
+        align-self: self-start;
 
         .edit-content-menu__category {
           display: inline-block;
@@ -69,6 +69,7 @@
         display: flex;
         align-items: center;
         flex-wrap: nowrap;
+        align-self: self-end;
         span:first-child,
         span:nth-child(2) {
           font-size: 2rem;
