--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -25,8 +25,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    min-width: 200px;
-    max-width: 350px;
+    width: 350px;
 
     &__header {
       display: flex;
@@ -36,10 +35,28 @@
       gap: 1rem;
       &--right {
         display: flex;
-        gap: 0.5rem;
-        overflow: scroll;
-        max-width: 300px;
-        align-self: self-start;
+        justify-content: space-between;
+        align-items: center;
+        .list {
+          display: flex;
+          gap: 0.5rem;
+          overflow: scroll;
+          max-width: 300px;
+          align-self: self-start;
+          flex-wrap: nowrap;
+        }
+        .list.wrap {
+          flex-wrap: wrap;
+        }
+        .expand-btn {
+          width: 25px;
+          height: 25px;
+          border-radius: 50%;
+          display: none;
+          align-items: center;
+          justify-content: center;
+          align-self: flex-start;
+        }
 
         .edit-content-menu__category {
           display: inline-block;
@@ -62,7 +79,7 @@
           color: var(--color-on-primary);
         }
       }
-      &--right::-webkit-scrollbar {
+      &--right .list::-webkit-scrollbar {
         display: none;
       }
       &--left {
