--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -2,6 +2,10 @@
   display: flex;
   gap: 1rem;
   overflow-x: auto;
+  cursor: grab;
+}
+.kanban-container:active {
+  cursor: grabbing;
 }
 
 .kanban {
