--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2349,8 +2349,7 @@ textarea {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-width: 200px;
-  max-width: 350px;
+  width: 350px;
 }
 .edit-content .edit-content-menu__header {
   display: flex;
@@ -2361,10 +2360,28 @@ textarea {
 }
 .edit-content .edit-content-menu__header--right {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.edit-content .edit-content-menu__header--right .list {
+  display: flex;
   gap: 0.5rem;
   overflow: scroll;
   max-width: 300px;
   align-self: self-start;
+  flex-wrap: nowrap;
+}
+.edit-content .edit-content-menu__header--right .list.wrap {
+  flex-wrap: wrap;
+}
+.edit-content .edit-content-menu__header--right .expand-btn {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
 }
 .edit-content .edit-content-menu__header--right .edit-content-menu__category {
   display: inline-block;
@@ -2385,7 +2402,7 @@ textarea {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
 }
-.edit-content .edit-content-menu__header--right::-webkit-scrollbar {
+.edit-content .edit-content-menu__header--right .list::-webkit-scrollbar {
   display: none;
 }
 .edit-content .edit-content-menu__header--left {
@@ -3191,6 +3208,11 @@ textarea {
   display: flex;
   gap: 1rem;
   overflow-x: auto;
+  cursor: grab;
+}
+
+.kanban-container:active {
+  cursor: grabbing;
 }
 
 .kanban {
