--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -30,7 +30,6 @@
     &__header {
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: space-between;
       gap: 1rem;
       &--right {
@@ -42,8 +41,9 @@
           gap: 0.5rem;
           overflow: scroll;
           max-width: 300px;
-          align-self: self-start;
+          // align-self: self-start;
           flex-wrap: nowrap;
+          align-self: flex-end;
         }
         .list.wrap {
           flex-wrap: wrap;
