--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2354,7 +2354,6 @@ textarea {
 .edit-content .edit-content-menu__header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
   gap: 1rem;
 }
@@ -2368,8 +2367,8 @@ textarea {
   gap: 0.5rem;
   overflow: scroll;
   max-width: 300px;
-  align-self: self-start;
   flex-wrap: nowrap;
+  align-self: flex-end;
 }
 .edit-content .edit-content-menu__header--right .list.wrap {
   flex-wrap: wrap;
