--- a/sass/_chips.scss
+++ b/sass/_chips.scss
@@ -24,6 +24,6 @@
   background-color: var(--color-red);
 }
 .small-chip.neutral {
-  border: 1px solid var(--color-on-primary-light);
-  background-color: var(--color-on-primary);
+  // border: 1px solid var(--color-on-primary-light);
+  background-color: var(--color-bg-dark);
 }
