--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -143,6 +143,10 @@
       .status-icon.blue {
         color: var(--color-blue);
       }
+
+      .note-date {
+        cursor: pointer;
+      }
     }
 
     .line {
@@ -166,6 +170,12 @@
       margin-bottom: -10px;
       font-size: 15px;
       color: var(--color-primary);
+    }
+
+    .kanban-icons {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
     }
   }
 
