--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2183,8 +2183,7 @@ textarea {
 }
 
 .small-chip.neutral {
-  border: 1px solid var(--color-on-primary-light);
-  background-color: var(--color-on-primary);
+  background-color: var(--color-bg-dark);
 }
 
 .tags {
@@ -3336,6 +3335,9 @@ textarea {
 .kanban-content .kanban-note-header .status-icon.blue {
   color: var(--color-blue);
 }
+.kanban-content .kanban-note-header .note-date {
+  cursor: pointer;
+}
 .kanban-content .kanban-note .line {
   width: 100%;
   height: 1px;
@@ -3356,6 +3358,11 @@ textarea {
   margin-bottom: -10px;
   font-size: 15px;
   color: var(--color-primary);
+}
+.kanban-content .kanban-note .kanban-icons {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 .kanban-content .kanban-note.yellow-border {
   border: 0.5px solid #f4e774;
