--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -3,6 +3,7 @@
   gap: 1rem;
   overflow-x: auto;
   cursor: grab;
+  min-height: 100vh;
 }
 .kanban-container:active {
   cursor: grabbing;
@@ -15,6 +16,7 @@
   border-radius: 1rem;
   animation: minimize-reversed 0.3s ease-in-out forwards;
   padding: 1rem;
+  margin-bottom: 1rem;
 
   &-header {
     display: flex;
